--- a/css/styles.css
+++ b/css/styles.css
@@ -219,26 +219,26 @@ img {
 .instagrambillede.billede1 {
   grid-row: 1/2;
   grid-column: 4/7;
-  background-image: url("../images/croks.jpeg");
+  background-image: url("../images/croks.jpg");
   background-size: cover; }
 
 .instagrambillede.billede2 {
   grid-row: 1/2;
   grid-column: 7/10;
-  background-image: url("../images/wine-table.jpeg");
+  background-image: url("../images/wine-table.jpg");
   background-size: cover; }
 
 .instagrambillede.billede3 {
   grid-row: 1/2;
   grid-column: 10/13;
-  background-image: url("../images/intagramfoto2.jpeg");
+  background-image: url("../images/intagramfoto2.jpg");
   background-size: cover;
   background-position: center; }
 
 .instagrambillede.billede4 {
   grid-row: 2/3;
   grid-column: 4/7;
-  background-image: url("../images/instagramfoto3.jpeg");
+  background-image: url("../images/instagramfoto3.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -252,7 +252,7 @@ img {
 .instagrambillede.billede6 {
   grid-row: 2/3;
   grid-column: 10/13;
-  background-image: url("../images/instagramfoto4.jpeg");
+  background-image: url("../images/instagramfoto4.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -356,7 +356,7 @@ img {
 ----------------------------------thegrape----------------------
 ---------------------------------------------------------------------------*/
 .baggrund1 {
-  background-image: url("../images/wine-table.jpeg");
+  background-image: url("../images/wine-table.jpg");
   grid-column: 1/13;
   grid-row: 1/2;
   background-size: cover; }
