--- a/css/styles.scss
+++ b/css/styles.scss
@@ -291,21 +291,21 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede1{
   grid-row: 1/2;
   grid-column: 4/7;
-  background-image: url("../images/croks.jpeg");
+  background-image: url("../images/croks.jpg");
   background-size: cover;
 }
 
 .instagrambillede.billede2{
   grid-row: 1/2;
   grid-column: 7/10;
-  background-image: url("../images/wine-table.jpeg");
+  background-image: url("../images/wine-table.jpg");
   background-size: cover;
 }
 
 .instagrambillede.billede3{
   grid-row: 1/2;
   grid-column: 10/13;
-  background-image: url("../images/intagramfoto2.jpeg");
+  background-image: url("../images/intagramfoto2.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -313,7 +313,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede4{
   grid-row: 2/3;
   grid-column: 4/7;
-  background-image: url("../images/instagramfoto3.jpeg");
+  background-image: url("../images/instagramfoto3.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -329,7 +329,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 .instagrambillede.billede6{
   grid-row: 2/3;
   grid-column: 10/13;
-  background-image: url("../images/instagramfoto4.jpeg");
+  background-image: url("../images/instagramfoto4.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -455,7 +455,7 @@ $sektion-hojde: 500; //det her er standard højden på sektioner i px
 ---------------------------------------------------------------------------*/
 
 .baggrund1{
-   background-image: url("../images/wine-table.jpeg");
+   background-image: url("../images/wine-table.jpg");
    grid-column: 1/13;
    grid-row: 1/2;
   background-size: cover;
